/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.util.comm.relay;

import "src/devtools/mobileharness/api/model/proto/lab.proto";
import "src/devtools/mobileharness/infra/container/proto/test_engine.proto";

option java_package = "com.google.devtools.mobileharness.shared.util.comm.relay.proto";
option java_outer_classname = "DestinationProto";

message Destination {
  ServiceLocator service_locator = 1;
}

message ServiceLocator {
  oneof locator {
    LabLocator lab_locator = 1;
    DirectLocator direct_locator = 2;
    TestEngineLocator test_engine_locator = 3;
  }
}

message LabLocator {
  mobileharness.api.model.LabLocator lab_locator = 1;
}

message DirectLocator {
  string grpc_target = 1;
}

message TestEngineLocator {
  mobileharness.infra.container.TestEngineLocator test_engine_locator = 1;
  optional string master_detected_ip = 2;
}
